# dagster-example-k8s-pipes

./: Dockerfile  README.md  containerized_script.py  dagster_k8s_pipes.py  docker-compose.yml  pyproject.toml
